Fix research manager errors